Process is shown in the process list
